MatchFixer-Web-App/wwwroot/css/site.css
@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Nunito:ital,wght@0,606;1,606&family=Orbitron:wght@400..900&family=Special+Gothic+Expanded+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&display=swap');


@import "/css/cookies/cookies.css";
@import "/css/admin/admin.css";
@import "/css/container-effects.css";
@import "/css/effects/effects.css";
@import "/css/forgot-password.css";
@import "/css/resend-email-confirmation.css";
@import "/css/navigation.css";
@import "/css/home/home-page.css";
@import "/css/privacy.css";
@import "/css/register.css";
@import "/css/login.css";
@import "/css/profile/profile.css";
@import "/css/danger-zone.css";
@import "/css/game/start-game-screen.css";
@import "/css/match-events/add-event.css";
@import "/css/leaderboard/leaderboard.css";
@import "/css/match-events/live-events.css";
@import "/css/wiki-tooltip/wiki-tooltip.css";
@import "/css/bet-slip/bet-slip.css";
@import "/css/no-feedback.css";
@import "/css/wallet/wallet.css";
@import "/css/logo-quiz/logo-quiz.css";
@import "/css/results/match-results.css";
@import "/css/results/events-results.css";
@import "/css/trophy-catalog/trophy-catalog.css";
@import "/css/league-tables/league-tables.css";

* {
    font-family: "Nunito", sans-serif !important;
    font-weight: 400 !important;
    font-style: normal !important;
}
html {
    font-size: 14px;
    scroll-behavior: smooth;
}

html, body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}

html {
    scrollbar-gutter: stable;
}

nav {
    position: fixed !important;
    top: 0 !important;
    width: 100% !important;
    z-index: 2000 !important;
}

::-webkit-scrollbar {
    width: 5px;
    height: 5px;
    background-color: transparent;
}

::-webkit-scrollbar-track {
    background: #3370a8;
    border-radius: 1px;
}

::-webkit-scrollbar-thumb {
    background: #0DAB76;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background: #086b4a;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
    position: relative;
    min-height: 100%;
    width: 100% !important;
}

body {
    font-size: 1.2em;
    max-width: 100vw;
    max-height: 100vh;
}


.layout-container {
    display: flex !important;
    flex-direction: column !important;
    align-items: flex-start !important;
    justify-content: flex-start !important;
    flex-grow: 1;
    margin-top: 4.5em;
    max-width: 100vw;
    height: 100vh;
}

.privacy-layout-container {
    display: flex !important;
    flex-direction: column !important;
    align-items: flex-start !important;
    justify-content: flex-start !important;
    flex-grow: 1;
    margin-top: 4.5em;
    max-width: 100vw;
    height: 100vh;
}
.footer {
    position: absolute;
    bottom: 1%;
    right: 1%;
    z-index: -1;
    max-width: 1200px;
    margin: 0 auto;
    text-align: center;
    margin-top: 2rem;
    font-size: 0.75rem;
    color: rgba(255,255,255,.8);
}

.privacy-footer {
    max-width: 1200px;
    margin: 0 auto;
    text-align: center;
    margin-top: 10rem;
    font-size: 0.9rem;
    color: rgba(255,255,255,.8);
}

.bg {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw; /* Viewport width */
    height: 100vh; /* Viewport height */
    opacity: 0.35;
    z-index: -1;
    overflow: hidden;
    background-image: linear-gradient(-120deg, #6c3 45%, #09f 25%);
    box-shadow: 0 0 0 0rem #258cfb, 0 0 0 0rem #258cfb;
    animation: slide 3s ease-in-out infinite alternate-reverse;
    border: none;
}

.bg2 {
    animation-direction: alternate-reverse;
    animation-duration: 4s;
    border: none;
}

.bg3 {
    animation-duration: 5s;
    border: none;
}

.modal{
    z-index: 2001 !important;
}

.content {
    background-color: rgba(255,255,255,.8);
    border-radius: .25em;
    box-shadow: 0 0 .25em rgba(0,0,0,.25);
    box-sizing: border-box;
    left: 50%;
    padding: 10vmin;
    position: fixed;
    text-align: center;
    top: 50%;
    transform: translate(-50%, -50%);
}

h1 {
    font-family: monospace;
}

.navbar-collapse,
.navbar-nav {
    gap: 1em;
}

